--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -9,6 +9,10 @@
       "Courier New", monospace;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-5xl: 64rem;
+    --container-6xl: 72rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -168,8 +172,23 @@
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .right-6 {
+    right: calc(var(--spacing) * 6);
+  }
+  .right-\[14px\] {
+    right: 14px;
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .bottom-\[35\%\] {
+    bottom: 35%;
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-\[14px\] {
+    left: 14px;
   }
   .z-50 {
     z-index: 50;
@@ -219,6 +238,12 @@
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
   }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
+  .mt-24 {
+    margin-top: calc(var(--spacing) * 24);
+  }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
   }
@@ -243,6 +268,9 @@
   .inline-block {
     display: inline-block;
   }
+  .inline-flex {
+    display: inline-flex;
+  }
   .table {
     display: table;
   }
@@ -258,11 +286,21 @@
     width: calc(var(--spacing) * 12);
     height: calc(var(--spacing) * 12);
   }
+  .size-16 {
+    width: calc(var(--spacing) * 16);
+    height: calc(var(--spacing) * 16);
+  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-\[22px\] {
+    height: 22px;
+  }
   .h-\[32px\] {
     height: 32px;
+  }
+  .h-\[34px\] {
+    height: 34px;
   }
   .h-\[44px\] {
     height: 44px;
@@ -270,11 +308,17 @@
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
+  .w-\[22px\] {
+    width: 22px;
+  }
   .w-\[82px\] {
     width: 82px;
   }
   .w-\[85\%\] {
     width: 85%;
+  }
+  .w-\[85px\] {
+    width: 85px;
   }
   .w-\[88\%\] {
     width: 88%;
@@ -282,11 +326,28 @@
   .w-\[720px\] {
     width: 720px;
   }
+  .w-auto {
+    width: auto;
+  }
   .w-full {
     width: 100%;
   }
+  .max-w-6xl {
+    max-width: var(--container-6xl);
+  }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .translate-x-0 {
+    --tw-translate-x: calc(var(--spacing) * 0);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-x-\[52px\] {
+    --tw-translate-x: 52px;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .transform {
+    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .cursor-not-allowed {
     cursor: not-allowed;
@@ -318,6 +379,9 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-0 {
+    gap: calc(var(--spacing) * 0);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -344,6 +408,19 @@
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
+  }
+  .gap-32 {
+    gap: calc(var(--spacing) * 32);
+  }
+  .space-y-4 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .rounded-\[8px\] {
+    border-radius: 8px;
   }
   .rounded-\[10px\] {
     border-radius: 10px;
@@ -372,6 +449,10 @@
     border-style: var(--tw-border-style);
     border-width: 2px;
   }
+  .border-\[3px\] {
+    border-style: var(--tw-border-style);
+    border-width: 3px;
+  }
   .border-t {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
@@ -379,6 +460,10 @@
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
+  }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
   }
   .border-\[\#5B7B5A\] {
     border-color: #5B7B5A;
@@ -416,6 +501,9 @@
   .bg-\[\#BE5103\] {
     background-color: #BE5103;
   }
+  .bg-\[\#FFE9A6\] {
+    background-color: #FFE9A6;
+  }
   .bg-\[var\(--Color-Light-Green\,\#D9E1CE\)\] {
     background-color: var(--Color-Light-Green,#D9E1CE);
   }
@@ -452,6 +540,9 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
   .px-12 {
     padding-inline: calc(var(--spacing) * 12);
   }
@@ -463,6 +554,9 @@
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
+  }
+  .py-\[4px\] {
+    padding-block: 4px;
   }
   .py-\[10px\] {
     padding-block: 10px;
@@ -488,8 +582,11 @@
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
-  .pb-6 {
-    padding-bottom: calc(var(--spacing) * 6);
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
+  }
+  .pb-10 {
+    padding-bottom: calc(var(--spacing) * 10);
   }
   .pb-16 {
     padding-bottom: calc(var(--spacing) * 16);
@@ -515,6 +612,9 @@
   .font-\[lexend\] {
     font-family: lexend;
   }
+  .text-\[12px\] {
+    font-size: 12px;
+  }
   .text-\[14px\] {
     font-size: 14px;
   }
@@ -529,6 +629,9 @@
   }
   .text-\[28px\] {
     font-size: 28px;
+  }
+  .text-\[36px\] {
+    font-size: 36px;
   }
   .text-\[40px\] {
     font-size: 40px;
@@ -560,6 +663,10 @@
   .font-\[500\] {
     --tw-font-weight: 500;
     font-weight: 500;
+  }
+  .font-\[600\] {
+    --tw-font-weight: 600;
+    font-weight: 600;
   }
   .font-\[700\] {
     --tw-font-weight: 700;
@@ -624,6 +731,10 @@
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 4px 6px -4px var(--tw-shadow-color, rgba(0,0,0,0.10));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-\[0_10px_15px_-3px_rgba\(0\,0\,0\,0\.10\)\] {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgba(0,0,0,0.10));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-\[0_20px_25px_-5px_rgba\(0\,0\,0\,0\.10\)\,_0_8px_10px_-6px_rgba\(0\,0\,0\,0\.10\)\] {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 8px 10px -6px var(--tw-shadow-color, rgba(0,0,0,0.10));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -636,52 +747,27 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .transition-all {
+    transition-property: all;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
   }
-  .placeholder\:pb-4 {
-    &::placeholder {
-      padding-bottom: calc(var(--spacing) * 4);
-    }
-  }
-  .placeholder\:pb-12 {
-    &::placeholder {
-      padding-bottom: calc(var(--spacing) * 12);
-    }
-  }
-  .placeholder\:pb-32 {
-    &::placeholder {
-      padding-bottom: calc(var(--spacing) * 32);
-    }
+  .select-none {
+    -webkit-user-select: none;
+    user-select: none;
   }
   .placeholder\:text-\[16px\] {
     &::placeholder {
       font-size: 16px;
-    }
-  }
-  .placeholder\:leading-\[1\.6\] {
-    &::placeholder {
-      --tw-leading: 1.6;
-      line-height: 1.6;
-    }
-  }
-  .placeholder\:leading-\[1\.9\] {
-    &::placeholder {
-      --tw-leading: 1.9;
-      line-height: 1.9;
-    }
-  }
-  .placeholder\:leading-\[32px\] {
-    &::placeholder {
-      --tw-leading: 32px;
-      line-height: 32px;
-    }
-  }
-  .placeholder\:leading-\[362px\] {
-    &::placeholder {
-      --tw-leading: 362px;
-      line-height: 362px;
     }
   }
   .placeholder\:whitespace-normal {
@@ -693,6 +779,13 @@
     &:hover {
       @media (hover: hover) {
         border-color: #52a74f;
+      }
+    }
+  }
+  .hover\:bg-\[\#9b5124\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #9b5124;
       }
     }
   }
@@ -724,6 +817,20 @@
       }
     }
   }
+  .hover\:opacity-70 {
+    &:hover {
+      @media (hover: hover) {
+        opacity: 70%;
+      }
+    }
+  }
+  .hover\:opacity-80 {
+    &:hover {
+      @media (hover: hover) {
+        opacity: 80%;
+      }
+    }
+  }
   .focus\:border-\[\#795634\] {
     &:focus {
       border-color: #795634;
@@ -733,6 +840,11 @@
     &:focus {
       outline-style: var(--tw-outline-style);
       outline-width: 0px;
+    }
+  }
+  .lg\:relative {
+    @media (width >= 64rem) {
+      position: relative;
     }
   }
   .lg\:order-1 {
@@ -773,6 +885,11 @@
   .lg\:mt-0 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:mt-3 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 3);
     }
   }
   .lg\:mt-4 {
@@ -825,11 +942,6 @@
       margin-bottom: calc(var(--spacing) * 14);
     }
   }
-  .lg\:mb-16 {
-    @media (width >= 64rem) {
-      margin-bottom: calc(var(--spacing) * 16);
-    }
-  }
   .lg\:-ml-12 {
     @media (width >= 64rem) {
       margin-left: calc(var(--spacing) * -12);
@@ -861,9 +973,30 @@
       height: calc(var(--spacing) * 14);
     }
   }
+  .lg\:size-24 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 24);
+      height: calc(var(--spacing) * 24);
+    }
+  }
+  .lg\:h-\[26px\] {
+    @media (width >= 64rem) {
+      height: 26px;
+    }
+  }
   .lg\:h-\[48px\] {
     @media (width >= 64rem) {
       height: 48px;
+    }
+  }
+  .lg\:w-\[26px\] {
+    @media (width >= 64rem) {
+      width: 26px;
+    }
+  }
+  .lg\:w-\[90px\] {
+    @media (width >= 64rem) {
+      width: 90px;
     }
   }
   .lg\:w-\[124px\] {
@@ -871,9 +1004,24 @@
       width: 124px;
     }
   }
+  .lg\:w-\[200px\] {
+    @media (width >= 64rem) {
+      width: 200px;
+    }
+  }
+  .lg\:w-\[216px\] {
+    @media (width >= 64rem) {
+      width: 216px;
+    }
+  }
   .lg\:w-\[390px\] {
     @media (width >= 64rem) {
       width: 390px;
+    }
+  }
+  .lg\:w-\[450px\] {
+    @media (width >= 64rem) {
+      width: 450px;
     }
   }
   .lg\:w-\[560px\] {
@@ -906,9 +1054,34 @@
       flex-direction: row;
     }
   }
+  .lg\:items-end {
+    @media (width >= 64rem) {
+      align-items: flex-end;
+    }
+  }
+  .lg\:justify-between {
+    @media (width >= 64rem) {
+      justify-content: space-between;
+    }
+  }
+  .lg\:justify-start {
+    @media (width >= 64rem) {
+      justify-content: flex-start;
+    }
+  }
+  .lg\:gap-6 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 6);
+    }
+  }
   .lg\:gap-8 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
     }
   }
   .lg\:gap-12 {
@@ -924,6 +1097,12 @@
   .lg\:gap-16 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 16);
+    }
+  }
+  .lg\:border-b-0 {
+    @media (width >= 64rem) {
+      border-bottom-style: var(--tw-border-style);
+      border-bottom-width: 0px;
     }
   }
   .lg\:px-6 {
@@ -1016,6 +1195,16 @@
       font-size: 24px;
     }
   }
+  .lg\:text-\[36px\] {
+    @media (width >= 64rem) {
+      font-size: 36px;
+    }
+  }
+  .lg\:text-\[40px\] {
+    @media (width >= 64rem) {
+      font-size: 40px;
+    }
+  }
   .lg\:text-\[45px\] {
     @media (width >= 64rem) {
       font-size: 45px;
@@ -1061,16 +1250,6 @@
       }
     }
   }
-  .xl\:ml-12 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 12);
-    }
-  }
-  .xl\:ml-20 {
-    @media (width >= 80rem) {
-      margin-left: calc(var(--spacing) * 20);
-    }
-  }
   .xl\:ml-32 {
     @media (width >= 80rem) {
       margin-left: calc(var(--spacing) * 32);
@@ -1081,19 +1260,14 @@
       width: 490px;
     }
   }
-  .xl\:w-\[917px\] {
-    @media (width >= 80rem) {
-      width: 917px;
-    }
-  }
   .xl\:w-\[927px\] {
     @media (width >= 80rem) {
       width: 927px;
     }
   }
-  .xl\:w-\[1017px\] {
+  .xl\:gap-36 {
     @media (width >= 80rem) {
-      width: 1017px;
+      gap: calc(var(--spacing) * 36);
     }
   }
   .xl\:text-start {
@@ -1104,6 +1278,11 @@
   .xl\:text-\[72px\] {
     @media (width >= 80rem) {
       font-size: 72px;
+    }
+  }
+  .xl\:whitespace-nowrap {
+    @media (width >= 80rem) {
+      white-space: nowrap;
     }
   }
 }
@@ -1121,11 +1300,54 @@ html, body {
 .gradient-bg {
   background: var(--Beige-BG, linear-gradient(180deg, #F4EFE8 0%, #FAF8F5 100%));
 }
+.gradient-bg-2 {
+  background: var(--Beige-BG, linear-gradient(180deg, #FAF8F5 0%, #F4EFE8 100%));
+}
 @media (max-width:1024px) {
   .hero-bg {
     background-size: contain;
     background-position: center top, center 550px;
   }
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-space-y-reverse {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -1221,6 +1443,15 @@ html, body {
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
+      --tw-rotate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
+      --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
