--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -11,6 +11,8 @@
     --spacing: 0.25rem;
     --container-5xl: 64rem;
     --container-6xl: 72rem;
+    --font-weight-medium: 500;
+    --font-weight-semibold: 600;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -169,6 +171,9 @@
   .relative {
     position: relative;
   }
+  .top-\[30\%\] {
+    top: 30%;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -189,6 +194,9 @@
   }
   .left-\[14px\] {
     left: 14px;
+  }
+  .z-20 {
+    z-index: 20;
   }
   .z-50 {
     z-index: 50;
@@ -213,6 +221,12 @@
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .-mt-32 {
+    margin-top: calc(var(--spacing) * -32);
+  }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -243,6 +257,12 @@
   }
   .mt-24 {
     margin-top: calc(var(--spacing) * 24);
+  }
+  .-mb-6 {
+    margin-bottom: calc(var(--spacing) * -6);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
   }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
@@ -282,6 +302,10 @@
     width: calc(var(--spacing) * 8);
     height: calc(var(--spacing) * 8);
   }
+  .size-10 {
+    width: calc(var(--spacing) * 10);
+    height: calc(var(--spacing) * 10);
+  }
   .size-12 {
     width: calc(var(--spacing) * 12);
     height: calc(var(--spacing) * 12);
@@ -289,6 +313,13 @@
   .size-16 {
     width: calc(var(--spacing) * 16);
     height: calc(var(--spacing) * 16);
+  }
+  .size-20 {
+    width: calc(var(--spacing) * 20);
+    height: calc(var(--spacing) * 20);
+  }
+  .h-7 {
+    height: calc(var(--spacing) * 7);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -302,14 +333,44 @@
   .h-\[34px\] {
     height: 34px;
   }
+  .h-\[40px\] {
+    height: 40px;
+  }
   .h-\[44px\] {
     height: 44px;
+  }
+  .h-\[64px\] {
+    height: 64px;
+  }
+  .h-\[203px\] {
+    height: 203px;
+  }
+  .h-\[213px\] {
+    height: 213px;
+  }
+  .h-\[216px\] {
+    height: 216px;
+  }
+  .h-\[714px\] {
+    height: 714px;
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
   .w-\[22px\] {
     width: 22px;
+  }
+  .w-\[40px\] {
+    width: 40px;
+  }
+  .w-\[64px\] {
+    width: 64px;
+  }
+  .w-\[78\%\] {
+    width: 78%;
   }
   .w-\[82px\] {
     width: 82px;
@@ -323,14 +384,29 @@
   .w-\[88\%\] {
     width: 88%;
   }
+  .w-\[100\%\] {
+    width: 100%;
+  }
+  .w-\[110px\] {
+    width: 110px;
+  }
+  .w-\[152px\] {
+    width: 152px;
+  }
   .w-\[720px\] {
     width: 720px;
+  }
+  .w-\[872px\] {
+    width: 872px;
   }
   .w-auto {
     width: auto;
   }
   .w-full {
     width: 100%;
+  }
+  .max-w-5xl {
+    max-width: var(--container-5xl);
   }
   .max-w-6xl {
     max-width: var(--container-6xl);
@@ -400,11 +476,17 @@
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
+  .gap-9 {
+    gap: calc(var(--spacing) * 9);
+  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
   .gap-12 {
     gap: calc(var(--spacing) * 12);
+  }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
@@ -412,12 +494,37 @@
   .gap-32 {
     gap: calc(var(--spacing) * 32);
   }
+  .gap-\[32px\] {
+    gap: 32px;
+  }
+  .gap-\[33px\] {
+    gap: 33px;
+  }
+  .gap-\[34px\] {
+    gap: 34px;
+  }
   .space-y-4 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
     }
+  }
+  .space-y-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .gap-x-8 {
+    column-gap: calc(var(--spacing) * 8);
+  }
+  .gap-y-10 {
+    row-gap: calc(var(--spacing) * 10);
+  }
+  .gap-y-12 {
+    row-gap: calc(var(--spacing) * 12);
   }
   .rounded-\[8px\] {
     border-radius: 8px;
@@ -441,6 +548,10 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-2 {
     border-style: var(--tw-border-style);
     border-width: 2px;
@@ -452,6 +563,10 @@
   .border-\[3px\] {
     border-style: var(--tw-border-style);
     border-width: 3px;
+  }
+  .border-y {
+    border-block-style: var(--tw-border-style);
+    border-block-width: 1px;
   }
   .border-t {
     border-top-style: var(--tw-border-style);
@@ -501,6 +616,9 @@
   .bg-\[\#BE5103\] {
     background-color: #BE5103;
   }
+  .bg-\[\#EAE4D8\] {
+    background-color: #EAE4D8;
+  }
   .bg-\[\#FFE9A6\] {
     background-color: #FFE9A6;
   }
@@ -515,6 +633,9 @@
   }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .bg-\[linear-gradient\(151deg\,rgba\(255\,255\,255\,0\.40\)_-0\.97\%\,rgba\(255\,255\,255\,0\.80\)_95\.5\%\)\] {
+    background-image: linear-gradient(151deg,rgba(255,255,255,0.40) -0.97%,rgba(255,255,255,0.80) 95.5%);
   }
   .bg-\[linear-gradient\(180deg\,\#F4EFE8_0\%\,\#FAF8F5_100\%\)\] {
     background-image: linear-gradient(180deg,#F4EFE8 0%,#FAF8F5 100%);
@@ -555,14 +676,23 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-14 {
+    padding-block: calc(var(--spacing) * 14);
+  }
   .py-\[4px\] {
     padding-block: 4px;
   }
   .py-\[10px\] {
     padding-block: 10px;
   }
+  .py-\[16px\] {
+    padding-block: 16px;
+  }
   .py-\[48px\] {
     padding-block: 48px;
+  }
+  .py-\[96px\] {
+    padding-block: 96px;
   }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
@@ -575,6 +705,9 @@
   }
   .pt-\[64px\] {
     padding-top: 64px;
+  }
+  .pt-\[76px\] {
+    padding-top: 76px;
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
@@ -600,6 +733,9 @@
   .pb-\[48px\] {
     padding-bottom: 48px;
   }
+  .pb-\[96px\] {
+    padding-bottom: 96px;
+  }
   .text-center {
     text-align: center;
   }
@@ -620,6 +756,9 @@
   }
   .text-\[16px\] {
     font-size: 16px;
+  }
+  .text-\[17px\] {
+    font-size: 17px;
   }
   .text-\[20px\] {
     font-size: 20px;
@@ -672,6 +811,14 @@
     --tw-font-weight: 700;
     font-weight: 700;
   }
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
+  }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
+  }
   .tracking-\[1px\] {
     --tw-tracking: 1px;
     letter-spacing: 1px;
@@ -687,6 +834,9 @@
   }
   .text-\[\#5B7B5A\] {
     color: #5B7B5A;
+  }
+  .text-\[\#6E6E6E\] {
+    color: #6E6E6E;
   }
   .text-\[\#7D7A74\] {
     color: #7D7A74;
@@ -723,6 +873,10 @@
   .opacity-100 {
     opacity: 100%;
   }
+  .shadow-\[0_1px_3px_0_rgba\(0\,0\,0\,0\.10\)\,0_1px_2px_-1px_rgba\(0\,0\,0\,0\.10\)\] {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 1px 2px -1px var(--tw-shadow-color, rgba(0,0,0,0.10));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-\[0_1px_3px_0_rgba\(0\,0\,0\,0\.10\)\,_0_1px_2px_-1px_rgba\(0\,0\,0\,0\.10\)\] {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 1px 2px -1px var(--tw-shadow-color, rgba(0,0,0,0.10));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -739,6 +893,18 @@
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 8px 10px -6px var(--tw-shadow-color, rgba(0,0,0,0.10));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-\[0_25px_50px_-12px_rgba\(0\,0\,0\,0\.25\)\] {
+    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgba(0,0,0,0.25));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-\[0_25px_50px_-12px_rgba\(0\,0\,0\,0\.29\)\] {
+    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgba(0,0,0,0.29));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-\[0_25px_50px_-12px_rgba\(0\,0\,0\,0\.95\)\] {
+    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgba(0,0,0,0.95));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -746,6 +912,9 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .filter {
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
@@ -817,6 +986,13 @@
       }
     }
   }
+  .hover\:bg-\[\#ffffffda\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #ffffffda;
+      }
+    }
+  }
   .hover\:opacity-70 {
     &:hover {
       @media (hover: hover) {
@@ -831,6 +1007,22 @@
       }
     }
   }
+  .hover\:brightness-95 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-brightness: brightness(95%);
+        filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+      }
+    }
+  }
+  .hover\:saturate-200 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-saturate: saturate(200%);
+        filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+      }
+    }
+  }
   .focus\:border-\[\#795634\] {
     &:focus {
       border-color: #795634;
@@ -840,6 +1032,36 @@
     &:focus {
       outline-style: var(--tw-outline-style);
       outline-width: 0px;
+    }
+  }
+  .sm\:top-\[45\%\] {
+    @media (width >= 40rem) {
+      top: 45%;
+    }
+  }
+  .sm\:h-\[196px\] {
+    @media (width >= 40rem) {
+      height: 196px;
+    }
+  }
+  .sm\:w-\[196px\] {
+    @media (width >= 40rem) {
+      width: 196px;
+    }
+  }
+  .sm\:grid-cols-3 {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .md\:text-\[16px\] {
+    @media (width >= 48rem) {
+      font-size: 16px;
+    }
+  }
+  .md\:text-\[32px\] {
+    @media (width >= 48rem) {
+      font-size: 32px;
     }
   }
   .lg\:relative {
@@ -895,6 +1117,11 @@
   .lg\:mt-4 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:mt-5 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 5);
     }
   }
   .lg\:mt-6 {
@@ -967,10 +1194,21 @@
       display: none;
     }
   }
+  .lg\:inline-flex {
+    @media (width >= 64rem) {
+      display: inline-flex;
+    }
+  }
   .lg\:size-14 {
     @media (width >= 64rem) {
       width: calc(var(--spacing) * 14);
       height: calc(var(--spacing) * 14);
+    }
+  }
+  .lg\:size-20 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 20);
+      height: calc(var(--spacing) * 20);
     }
   }
   .lg\:size-24 {
@@ -989,9 +1227,29 @@
       height: 48px;
     }
   }
+  .lg\:h-\[64px\] {
+    @media (width >= 64rem) {
+      height: 64px;
+    }
+  }
+  .lg\:h-\[152px\] {
+    @media (width >= 64rem) {
+      height: 152px;
+    }
+  }
+  .lg\:h-auto {
+    @media (width >= 64rem) {
+      height: auto;
+    }
+  }
   .lg\:w-\[26px\] {
     @media (width >= 64rem) {
       width: 26px;
+    }
+  }
+  .lg\:w-\[64px\] {
+    @media (width >= 64rem) {
+      width: 64px;
     }
   }
   .lg\:w-\[90px\] {
@@ -1002,6 +1260,11 @@
   .lg\:w-\[124px\] {
     @media (width >= 64rem) {
       width: 124px;
+    }
+  }
+  .lg\:w-\[160px\] {
+    @media (width >= 64rem) {
+      width: 160px;
     }
   }
   .lg\:w-\[200px\] {
@@ -1034,6 +1297,16 @@
       width: 800px;
     }
   }
+  .lg\:w-\[876px\] {
+    @media (width >= 64rem) {
+      width: 876px;
+    }
+  }
+  .lg\:w-auto {
+    @media (width >= 64rem) {
+      width: auto;
+    }
+  }
   .lg\:grid-cols-2 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1042,6 +1315,11 @@
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-4 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-\[300px_1fr\] {
@@ -1115,6 +1393,11 @@
       padding-inline: calc(var(--spacing) * 8);
     }
   }
+  .lg\:px-32 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 32);
+    }
+  }
   .lg\:px-\[64px\] {
     @media (width >= 64rem) {
       padding-inline: 64px;
@@ -1133,6 +1416,11 @@
   .lg\:pt-\[32px\] {
     @media (width >= 64rem) {
       padding-top: 32px;
+    }
+  }
+  .lg\:pt-\[76px\] {
+    @media (width >= 64rem) {
+      padding-top: 76px;
     }
   }
   .lg\:pr-\[56px\] {
@@ -1158,6 +1446,11 @@
   .lg\:pb-\[56px\] {
     @media (width >= 64rem) {
       padding-bottom: 56px;
+    }
+  }
+  .lg\:pb-\[96px\] {
+    @media (width >= 64rem) {
+      padding-bottom: 96px;
     }
   }
   .lg\:pl-\[32px\] {
@@ -1208,6 +1501,11 @@
   .lg\:text-\[45px\] {
     @media (width >= 64rem) {
       font-size: 45px;
+    }
+  }
+  .lg\:text-\[46px\] {
+    @media (width >= 64rem) {
+      font-size: 46px;
     }
   }
   .lg\:text-\[48px\] {
@@ -1265,14 +1563,29 @@
       width: 927px;
     }
   }
+  .xl\:items-center {
+    @media (width >= 80rem) {
+      align-items: center;
+    }
+  }
   .xl\:gap-36 {
     @media (width >= 80rem) {
       gap: calc(var(--spacing) * 36);
     }
   }
+  .xl\:text-center {
+    @media (width >= 80rem) {
+      text-align: center;
+    }
+  }
   .xl\:text-start {
     @media (width >= 80rem) {
       text-align: start;
+    }
+  }
+  .xl\:text-\[56px\] {
+    @media (width >= 80rem) {
+      font-size: 56px;
     }
   }
   .xl\:text-\[72px\] {
@@ -1307,6 +1620,11 @@ html, body {
   .hero-bg {
     background-size: contain;
     background-position: center top, center 550px;
+  }
+}
+@media (max-width:400px) {
+  .descripton-text {
+    top: 26%;
   }
 }
 @property --tw-translate-x {
@@ -1436,6 +1754,59 @@ html, body {
   inherits: false;
   initial-value: solid;
 }
+@property --tw-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-drop-shadow-size {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1471,6 +1842,19 @@ html, body {
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
+      --tw-blur: initial;
+      --tw-brightness: initial;
+      --tw-contrast: initial;
+      --tw-grayscale: initial;
+      --tw-hue-rotate: initial;
+      --tw-invert: initial;
+      --tw-opacity: initial;
+      --tw-saturate: initial;
+      --tw-sepia: initial;
+      --tw-drop-shadow: initial;
+      --tw-drop-shadow-color: initial;
+      --tw-drop-shadow-alpha: 100%;
+      --tw-drop-shadow-size: initial;
       --tw-duration: initial;
     }
   }
