--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -9,7 +9,6 @@
       "Courier New", monospace;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-5xl: 64rem;
     --container-6xl: 72rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -163,6 +162,9 @@
   }
 }
 @layer utilities {
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
   }
@@ -255,9 +257,6 @@
   }
   .block {
     display: block;
-  }
-  .contents {
-    display: contents;
   }
   .flex {
     display: flex;
@@ -494,6 +493,9 @@
   }
   .bg-\[\#BE5103\] {
     background-color: #BE5103;
+  }
+  .bg-\[\#C9D5BD\] {
+    background-color: #C9D5BD;
   }
   .bg-\[\#FFE9A6\] {
     background-color: #FFE9A6;
